﻿i-MSCP ChangeLog

------------------------------------------------------------------------------------------------------------------------
Git 1.2.x
------------------------------------------------------------------------------------------------------------------------

FRONTEND
	Fixed: Unable to set language

YOUTRACK
	Fixed: #IP-1353: i18n issue - Admin / System information not translatable

------------------------------------------------------------------------------------------------------------------------
1.2.3
------------------------------------------------------------------------------------------------------------------------

2015-06-07: Laurent Declercq
	RELEASE i-MSCP 1.2.3

BACKEND
	Added: Custom DNS module (Modules::CustomDNS)
	Added: Mail support in backup feature
	Added: New 'temporary' attribute which allow to override configuration values temporarily (iMSCP::Config)
	Added: onBeforeSetPluginStatus event (Modules::Plugin)
	Added: PHP_FCGI_CHILDREN, PHP_FCGI_MAX_REQUESTS and PHP_VERSION configuration parameters (apache_fcgid)
	Added: Service providers (Sysvinit, Upstart and Systemd)
	Changed: Perl version >= 5.14.2 is now required
	Changed: Service configuration files are now lazy-loaded
	Fixed: Any task which belongs to the custom DNS records layer must not involve HTTPD configuration change
	Fixed: Bind9 must not be restarted each time a DNS zone is updated. A simple reload is sufficient
	Fixed: Force usage of search path when executing external commands
	Fixed: Frontend http port must be added in server traffic accounting
	Fixed: In some contexts, configuration files which belongs to subdomains are not regenerated
	Fixed: Last rotated log file must be processed when log rotation is detected (Servers::mta::postfix::getTraffic())
	Fixed: Last rotated log file must be processed when log rotation is detected (Servers::po::courier::getTraffic())